fixed flexbox align-items(center) not showing the top of the page by adding margin auto

--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,9 @@ body {
 
 
 #titleName {
-    padding: 0px 30px;
-    font-size: 0px;
-    transition: all 1s cubic-bezier(0.03, 0.63, 0.77, 1.21);
+  padding: 0px 30px;
+  font-size: 0px;
+  transition: all 1s cubic-bezier(0.03, 0.63, 0.77, 1.21);
 }
 
 #myName{
@@ -187,7 +187,7 @@ body {
   bottom: 10%;
   font-size: 20px;
   position: absolute;
-  right:44%;
+  right:45%;
   opacity: 0;
 }
 .titleButton:hover, .skipButton:hover {
@@ -205,21 +205,21 @@ body {
   position: relative;
 }
 
-.mainContainer > *{
+.mainContainer > div{
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
   width: 33.3333%;
   height: 100vh;
-  justify-content: center;
-  align-items: center;
   opacity: 0;
   transition: all 1s linear;
   position: relative;
+  text-align: center;
 }
 
 
-.mainContainer > * > *{
-  vertical-align: middle;
+.mainContainer > * > a{
   text-decoration: none;
   color: black;
   font-weight: bold;
@@ -263,25 +263,27 @@ body {
   background-position: center;
   background-size: cover;
   animation: backgroundEnter 2.5s linear;
+  overflow: scroll;
 }
 
 .about > a:hover {
   animation: textEffect 1s ease-in infinite;
 
 }
-.projectsContainer {
+.projects {
   background: url("./img/projectBackground1.jpg")no-repeat center;
   background-size: cover;
   animation: backgroundEnter 3.5s linear;
+  overflow: scroll;
 }
-.projectsContainer > a {
+.projects > a {
   color: white;
   font-weight: bold;
   text-shadow: 2px 2px 1px black;
   border-top: 5px solid white;
   border-bottom: 5px solid white;
 }
-.projectsContainer > a:hover{
+.projects > a:hover{
   animation: textEffect 1s ease-in infinite;
 
 }
@@ -289,6 +291,7 @@ body {
   background: url("./img/contact.jpeg")no-repeat center;
   background-size: cover;
   animation: backgroundEnter 3.7s linear;
+  overflow: scroll;
 }
 .contactMe > a:hover{
   animation: textEffect 1s ease-in infinite;
@@ -315,10 +318,11 @@ body {
 
 /*about page content*/
 #myPicWrapper{
+  flex-direction:column;
   background-color: white;
   width: 0%;
   min-width: 0px;
-  flex-direction:column;
+  margin: auto;
 }
 #myPic{
   background: url("./img/jeongKoo.jpg")no-repeat top;
@@ -326,11 +330,68 @@ body {
   width: 75%;
   height: 50%;
 }
-#brandStatement{
+#nameTitle{
+  text-align: center;
+  border-top: 5px solid black;
+  border-bottom: 5px solid black;
+  width: 80%;
   margin-top: 10px;
   font-size: 40px;
 }
-#brandStatement span{
+#nameTitle span{
   font-size: 30px;
-  color: #286cba;
+  color: #ce1d1d;
+  text-shadow: 1px 1px 1px black;
 }
+.aboutContainer{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
+}
+.brandStatement{
+  margin-top: 10px;
+  text-align: center;
+  font-size: 30px;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 20px;
+  width: 85%;
+  height: 100%;;
+}
+
+/*project page content*/
+.projectsContainer{
+  margin: auto;
+}
+/*contact page*/
+.contactContainer{
+  text-align: center;
+  margin: auto;
+}
+      .github {
+        background: url("./img/icons/github.png") center repeat-x;
+        background-size: cover;
+        margin: 14px;
+        width: 60px;
+        height: 60px;
+        display: inline-block;
+        opacity: 0.7;
+      }
+      .linkedin {
+        background: url("./img/icons/linkedin.png") center repeat-x;
+        background-size: cover;
+        margin: 14px;
+        width: 60px;
+        height: 60px;
+        display: inline-block;
+        opacity: 0.7
+      }
+      .instagram {
+        background: url("./img/icons/instagram.png") center repeat-x;
+        background-size: cover;
+        margin: 14px;
+        width: 60px;
+        height: 60px;
+        display: inline-block;
+        opacity: 0.7
+      }
